--- a/css/html5reset.css
+++ b/css/html5reset.css
@@ -37,7 +37,7 @@ html {
 /* consider resetting the default cursor: https://gist.github.com/murtaugh/5247154 */
 
 /* Responsive images and other embedded objects */
-/* if you don't have full control over `img` tags (if you have to overcome attributes), consider adding height: auto */
+/* if you don't have full control over `imgs` tags (if you have to overcome attributes), consider adding height: auto */
 img,
 object,
 embed {max-width: 100%;}
@@ -46,7 +46,7 @@ embed {max-width: 100%;}
    Note: keeping IMG here will cause problems if you're using foreground images as sprites.
     In fact, it *will* cause problems with Google Maps' controls at small size.
     If this is the case for you, try uncommenting the following:
-#map img {
+#map imgs {
         max-width: none;
 }
 */
